[gd_scene load_steps=5 format=3 uid="uid://dvpvhht5hn7ww"]

[ext_resource type="Script" uid="uid://bnqnyx54dx1q8" path="res://src/ConveyorAssembly/curved_belt_conveyor_assembly.gd" id="1_5kj7c"]
[ext_resource type="PackedScene" uid="uid://b2hnylsj67c5m" path="res://parts/ConveyorLegCBC.tscn" id="2_0xmjf"]
[ext_resource type="PackedScene" uid="uid://6vu4cx2v1ltg" path="res://parts/CurvedBeltConveyor.tscn" id="3_a54t1"]
[ext_resource type="PackedScene" uid="uid://c1dcpxt5x65et" path="res://parts/SideGuardsCBC.tscn" id="4_wyu5c"]

[node name="CurvedBeltConveyorAssembly" type="Node3D"]
process_mode = 3
script = ExtResource("1_5kj7c")
belt_color = Color(1, 1, 1, 1)
belt_texture = 0
conveyor_angle = 90.0
speed = 2.0
reference_distance = 0.5
belt_physics_material = null
speed_tag_group_name = ""
running_tag_group_name = ""
size = Vector3(1.524, 0.63, 1.524)
metadata/hijack_scale = null
metadata/_edit_group_ = true
metadata/_edit_group_ = true

[node name="AutoLegsStandFront" parent="." instance=ExtResource("2_0xmjf")]
transform = Transform3D(-4.37114e-08, 0, -0.811904, 0, 1.25, 0, 1, 0, -3.54895e-08, -1.143, -2, 0.04)

[node name="AutoLegsStandRear" parent="." instance=ExtResource("2_0xmjf")]
transform = Transform3D(1, 0, 0, 0, 1.25, 0, 0, 0, 0.811904, -0.04, -2, 1.143)

[node name="ConveyorCorner" parent="." instance=ExtResource("3_a54t1")]
size = Vector3(1.524, 0.63, 1.524)

[node name="SideGuardsCBC" parent="." instance=ExtResource("4_wyu5c")]
transform = Transform3D(0.999048, 0, -0.0436194, 0, 1, 0, 0.0436194, 0, 0.999048, 0, -0.246, 0)
size = Vector3(1.564, 4, 1)
